profilesdir = $(datadir)/MegaTunix/$(INTERROGATOR_DATA_DIR)/Profiles

profiles = README \
	B_and_G_1.x.prof \
	B_and_G_2.0-3.01.prof \
	Dualtable-1.02.prof \
	MS-II-Extra_2.0x.prof \
	MS-II.prof \
	SquirtnSpark-Extra-HR-029x.prof \
	SquirtnSpark-Extra-HR-010a.prof \
	SquirtnSpark-Extra-029x.prof \
	SquirtnSpark-Extra-029yx.prof 

profiles_DATA = $(profiles)

EXTRA_DIST = $(profiles)
