dashesdir = $(datadir)/MegaTunix/$(DASHES_DATA_DIR)

dashes_files = 	\
		Default_Dash.xml \
		Autometer-ultralight.xml \
		Cobalt_Dash.xml \
		Impact_Dash.xml \
		Autometer-ultralight-degC.xml \
		Cobalt_Dash_degC.xml \
		Default_Dash_degC.xml \
		Impact_Dash_degC.xml 

dashes_DATA = $(dashes_files)

EXTRA_DIST = $(dashes_DATA)

CLEANFILES = *.gladep *.bak gmon.out
