dashesdir = $(datadir)/MegaTunix/$(DASHES_DATA_DIR)

dashes_files = 	\
		Default_Dash.xml \
		Default_Dash_degC.xml \
		Default_Dash_MS2.xml \
		Default_Dash_MS2_degC.xml \
		Autometer-ultralight.xml \
		Autometer-ultralight-degC.xml \
		Cobalt_Dash.xml \
		Cobalt_Dash_degC.xml \
		Impact_Dash.xml \
		Impact_Dash_degC.xml \
		Gemini_Dash.xml \
		Gemini_Dash_degC.xml \
		Ghost-Basic-Dash_degC.xml \
		Ghost-Basic-Dash.xml \
		Ghost-Dash_degC.xml \
		Ghost-Dash.xml \
		Honda_Dash.xml \
		Honda_Dash_degC.xml \
		MegaTune-Classic.xml \
		MegaTune-MS1-Classic.xml \
		MegaTune-MS2-Classic.xml \
		MegaTune-MS2-Extra.xml

dashes_DATA = $(dashes_files)

EXTRA_DIST = $(dashes_DATA)

CLEANFILES = *.gladep *.bak gmon.out
