headers =	aliasmanager.h \
		anchor.h
		binary.h
		conversion.h
		dll.h
		emitfromevents.h
		emitter.h
		emittermanip.h
		eventhandler.h
		exceptions.h
		iterator.h
		ltnode.h
		mark.h
		node.h
		nodeimpl.h
		nodereadimpl.h
		nodeutil.h
		noncopyable.h
		null.h
		ostream.h
		parser.h
		stlemitter.h
		stlnode.h
		traits.h
		yaml.h
	
EXTRA_DIST=$(headers)

